--- a/class.html
+++ b/class.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/make_style.css" />
+    <link rel="stylesheet" href="css/class_style.css" />
     <title>HTML 기본 속성 강의 자료</title>
   </head>
   <body>
