--- a/class.html
+++ b/class.html
@@ -143,7 +143,7 @@
             <code>&lt;img src="img/image1.jpeg" alt="이미지 설명"&gt;</code>
           </div>
           <div class="output">
-            <img src="img/image3.jpeg" alt="이미지 설명" width="30%" />
+            <img src="img/image3.png" alt="이미지 설명" width="30%" />
           </div>
         </div>
       </section>
