--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
   <body>
     <div class="container">
       <header>
-        <h1>환영합니다! 페이지를 선택하세요.</h1>
+        <h1>GYIA Tech해 [나만의 네컷 만들기]</h1>
       </header>
 
       <main>
         <div class="button-container">
-          <a href="class.html" class="button">Class 페이지</a>
-          <a href="my4cut.html" class="button">My4cut 페이지</a>
+          <a href="class.html" class="button">HTML 기본 내용</a>
+          <a href="my4cut.html" class="button">My4cut 예시</a>
         </div>
       </main>
 
       <footer>
-        <p>© 2024 Your Website. All Rights Reserved.</p>
+        <p>무단 배포 금지</p>
       </footer>
     </div>
   </body>
