--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
       <main>
         <div class="button-container">
           <a href="class.html" class="button">HTML 기본 내용</a>
-          <a href="my4cut.html" class="button">My4cut 예시</a>
+          <a href="my4cut.html" class="button">나만의 네컷 예시</a>
+          <a href="img/나만의 네컷 배경.zip" class="button" download
+            >나만의 네컷 배경 다운로드</a
+          >
         </div>
       </main>
 
