수업 자료 다운로드 버튼 생성

--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
         <div class="button-container">
           <a href="class.html" class="button">HTML 기본 내용</a>
           <a href="my4cut.html" class="button">나만의 네컷 예시</a>
-          <a href="img/나만의 네컷 배경.zip" class="button" download
-            >나만의 네컷 배경 다운로드</a
+          <a href="img/네컷 배경.zip" class="button" download
+            >[필수] 네컷 배경 다운로드</a
+          >
+          <a href="img/네컷 이미지 4개.zip" class="button" download
+            >[사진 4장 준비 못하신 분] 네컷 사진 다운로드</a
           >
         </div>
       </main>
